auto commit version 7.76